Added practice draft feature